[tool.poetry]
name = "nts-scraper"
version = "0.1.0"
description = ""
authors = ["Nathaniel Selzer <nateselzer123@gmail.com>"]
readme = "README.md"
packages = [{include = "nts_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
selenium = "^4.12.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.12.2"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
